# Rubikscubesolver

./: BFSSolver.h  CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  README.md  RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp  Rubikscube.h  Rubikscube3darray.h  main.cpp  math.cpp  math.h
